# evergreen-universe-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  PRIMER.md  README.md
evergreen/: Cargo.toml  README.md
evergreen-addrs/: Cargo.toml
evergreen-addrs/src/: methods.rs
evergreen-bin/: Cargo.toml
evergreen-bin/systemd/: eg-http-gateway.service  eg-websockets.service  osrf-router.service
evergreen-serde/: Cargo.toml
evergreen-serde/src/: date.rs  event.rs  idl.rs  lib.rs  value.rs
evergreen-services/sip2/: Cargo.toml
evergreen-services/sip2/src/: app.rs  checkin.rs  checkout.rs  holds.rs  item.rs  methods.rs  patron.rs  payment.rs  session.rs  util.rs
evergreen-store/: Cargo.toml
evergreen/examples/: basic-requests.rs  cache.rs  client.rs  common.rs  editor.rs  idldb.rs  remote.rs  targeter.rs  trigger.rs  value.rs  websockets.rs
evergreen/src/: apputil.rs  auth.rs  bus.rs  cache.rs  constants.rs  date.rs  db.rs  editor.rs  error.rs  event.rs  idl.rs  idldb.rs  init.rs  lib.rs  message.rs  method.rs  norm.rs  remote.rs  result.rs  samples.rs  sclient.rs  script.rs  session.rs  settings.rs  tests.rs  util.rs  value.rs
evergreen/src/common/: auth.rs  bib.rs  billing.rs  checkin.rs  checkout.rs  circ.rs  circulator.rs  holdings.rs  holds.rs  jq.rs  mod.rs  noncat.rs  org.rs  penalty.rs  renew.rs  service_test.rs  settings.rs  targeter.rs  transit.rs  trigger.rs  user.rs
evergreen/src/common/sip2/: README.md  item.rs  mod.rs  session.rs  util.rs
evergreen/src/common/trigger/: event.rs  mod.rs  processor.rs
evergreen/src/common/trigger/reactor/: circ.rs  mod.rs
evergreen/src/common/trigger/validator/: mod.rs
evergreen/src/osrf/: addr.rs  app.rs  bus.rs  cache.rs  client.rs  conf.rs  logging.rs  message.rs  method.rs  microsvc.rs  mod.rs  params.rs  sclient.rs  server.rs  session.rs  worker.rs
evergreen/src/services/actor/: app.rs  main.rs  methods.rs  micro.rs
evergreen/src/services/auth-internal/: app.rs  main.rs  methods.rs
evergreen/src/services/circ/: app.rs  main.rs  methods.rs
evergreen/src/services/hold-targeter/: app.rs  main.rs  methods.rs
evergreen/src/services/search/: app.rs  main.rs  methods.rs
evergreen/src/services/sip2/: app.rs  checkin.rs  checkout.rs  holds.rs  item.rs  main.rs  methods.rs  patron.rs  payment.rs  session.rs  util.rs
evergreen/src/services/store/: app.rs  main.rs  methods.rs  rs-store-e2e.rs
evergreen/tests/live/: auth.rs  auth_to_auth_linker.rs  cache.rs  circ.rs  json_query.rs  main.rs  store.rs  util.rs
kcls/: Cargo.toml  README.md
kcls-services/address/: Cargo.toml
kcls-services/address/data/shapefiles/: README.md  render-all-shapefiles.py
kcls-services/address/data/shapefiles/districts/: Everett_Public_Library.dbf  Everett_Public_Library.shp  Everett_Public_Library.shx  Fort_Vancouver_Regional_Library.dbf  Fort_Vancouver_Regional_Library.shp  Fort_Vancouver_Regional_Library.shx  Jefferson_County_Rural_Library_District.dbf  Jefferson_County_Rural_Library_District.shp  Jefferson_County_Rural_Library_District.shx  Kitsap_Regional_Library.dbf  Kitsap_Regional_Library.shx  NCW_Libraries.dbf  NCW_Libraries.shp  NCW_Libraries.shx  North_Olympic_Library_System.dbf  North_Olympic_Library_System.shp  North_Olympic_Library_System.shx  Pierce_County_Library_System.dbf  Pierce_County_Library_System.shp  Pierce_County_Library_System.shx  Port_Townsend_Public_Library.dbf  Port_Townsend_Public_Library.shp  Port_Townsend_Public_Library.shx  Puyallup_Public_Library.dbf  Puyallup_Public_Library.shp  Puyallup_Public_Library.shx  README.md  Seattle_Public_Library.dbf  Seattle_Public_Library.shx  Sno-Isle_Regional_Library.dbf  Sno-Isle_Regional_Library.shp  Sno-Isle_Regional_Library.shx  Tacoma_Public_Library.dbf  Tacoma_Public_Library.shp  Tacoma_Public_Library.shx  (+45 more)
kcls-services/address/src/: app.rs  lib.rs  main.rs  methods.rs  shapefile_util.rs
kcls-services/address/tests/: shapefile_tests.rs  test_points.json
kcls-services/addrs/: Cargo.toml  README-shapefile-test.md
kcls-services/addrs/src/: app.rs  methods.rs
kcls-services/addrs/tests/: api.rs  api_generic.rs  home_org_coverage.rs  mod.rs
kcls-services/addrs/tests/data/: README.md  home_org_test_locations.json
marctk/: Cargo.toml  README.md
marctk/benches/: extract_values.rs  marc_breaker.rs  marc_xml.rs
marctk/examples/: auth-marc-sample1.xml  basic.rs  bib-marc-sample1.mrc  bib-marc-sample1.xml  marctk-basic.rs  roundtrip.rs
marctk/src/: binary.rs  breaker.rs  lib.rs  query.rs  record.rs  xml.rs
marctk/src/record/: marc21_bibliographic.rs
marctk/tests/: record.rs
opensrf/: Cargo.toml  README.md
opensrf/conf/: opensrf_core.yml
opensrf/examples/: cache.rs  client-demo.rs  client.rs  rs-private.rs  rs-public.rs
opensrf/src/: addr.rs  app.rs  bus.rs  cache.rs  classified.rs  client.rs  conf.rs  init.rs  lib.rs  logging.rs  message.rs  method.rs  params.rs  sclient.rs  server.rs  session.rs  tests.rs  util.rs  worker.rs
sip2/: Cargo.toml  README.md
sip2-mediator/: Cargo.toml  README.md
sip2-mediator/conf/: eg-sip2-mediator.example.yml  eg-sip2-mediator.yml
sip2-mediator/src/: conf.rs  main.rs  server.rs  session.rs
sip2-mediator/systemd/: eg-sip2-mediator.service
sip2-server/: Cargo.toml  README.md
sip2-server/conf/: eg-sip2-server.example.yml  sip2-server.yml
sip2-server/src/: checkin.rs  checkout.rs  conf.rs  item.rs  main.rs  monitor.rs  patron.rs  payment.rs  server.rs  session.rs  util.rs
sip2/examples/: basic.rs  sip2-client.rs
sip2/src/: client.rs  connection.rs  error.rs  lib.rs  message.rs  message_json.rs  params.rs  spec.rs  tests.rs  util.rs
websockets/: Cargo.toml
websockets/src/: main.rs
z39/: Cargo.toml  README.md
z39-server/: Cargo.toml  README.md
z39-server/conf/: eg-z39-server.yml
z39-server/src/: conf.rs  error.rs  lib.rs  limits.rs  main.rs  message.rs  messages.rs  query.rs  server.rs  session.rs
z39/src/: bib1.rs  error.rs  lib.rs  message.rs  prefs.rs  query.rs  settings.rs  test.rs
z39/src/server/: mod.rs  server.rs  session.rs
z39/src/types/: bib1.rs  mod.rs  oid.rs  pdu.rs
(+350 files in other folders)
