[workspace]
resolver = "2"
members = [
  "mptc",
  "marctk",
  "evergreen",
  "sip2",
  "sip2-mediator",
  "z39",
  "kcls", 
  "evergreen-actor",
  "evergreen-sip2",
  "evergreen-circ",
  "evergreen-search",
  "evergreen-store",
  "evergreen-hold-targeter",
  "evergreen-auth-internal",
]
default-members = [
  "mptc",
  "marctk",
  "sip2",
  "evergreen",
]
