[workspace]
resolver = "2"
members = [
  "mptc",
  "marctk",
  "evergreen",
  "sip2",
  "sip2-mediator",
  "z39",
  "kcls", 
  "evergreen-bin",
  "evergreen-services/sip2",
  "evergreen-services/addrs",
#  "evergreen-services/actor",
#  "evergreen-services/circ",
#  "evergreen-services/search",
#  "evergreen-services/store",
#  "evergreen-services/hold-targeter",
#  "evergreen-services/auth-internal",
]
