[package]
name = "evergreen-addrs"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
evergreen = { path = "../evergreen" }
json = "0.12.4"
log = "0.4.22"
serde_json = "1.0.140"
smarty-rust-sdk = "0.4.4"
tokio = "1.44.2"

[[bin]]
name = "eg-service-rs-addrs"
path = "src/main.rs"


