[package]
name = "evergreen-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
chrono-tz = "0.10.0"
gethostname = "0.5.0"
log = "0.4.22"
redis = "0.27.6"
regex = "1.11.1"
roxmltree = "0.20.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
yaml-rust = "0.4.5"
