[package]
name = "evergreen"
version = "0.1.0"
edition = "2021"
authors = ["Bill Erickson <berickxx@gmail.com>"]

[dependencies]
mptc = { path = "../mptc" }
marctk = { path = "../marctk" }
sip2 = { path = "../sip2" }
rand = "0.8.5"
log = "0.4.22"
syslog = "7.0.0"
json = "0.12.4"
roxmltree = "0.20.0"
redis = "0.28.0"
gethostname = "0.5.0"
chrono = "0.4.39"
chrono-tz = "0.10.0"
postgres = { version = "0.19.9", features = ["with-chrono-0_4"] }
rust_decimal = { version = "1.36.0", features = ["db-postgres"] }
pg_interval = "0.4.2"
regex = "1.11.1"
getopts = "0.2.21"
md5 = "0.7.0"
memcache = "0.18.0"
daemonize = "0.5.0"
icu_normalizer = "1.5.0"
socket2 = "0.5.8"
url = "2.5.4"
ssh2 = "0.9.4"
ftp = "3.0.1"
glob = "0.3.2"
