[package]
name = "evergreen"
version = "0.1.0"
edition = "2021"
authors = ["Bill Erickson <berickxx@gmail.com>"]

[dependencies]
mptc = { path = "../mptc" }
marctk = { path = "../marctk" }
sip2 = { path = "../sip2" }
rand = "0.8.5"
log = "0.4.22"
syslog = "7.0.0"
json = "0.12.4"
roxmltree = "0.20.0"
redis = "0.28.0"
gethostname = "0.5.0"
chrono = "0.4.39"
chrono-tz = "0.10.0"
postgres = { version = "0.19.9", features = ["with-chrono-0_4"] }
rust_decimal = { version = "1.36.0", features = ["db-postgres"] }
pg_interval = "0.4.2"
postgres-cursor = "0.4.0"
regex = "1.11.1"
getopts = "0.2.21"
md5 = "0.7.0"
memcache = "0.18.0"
daemonize = "0.5.0"
icu_normalizer = "1.5.0"
httparse = "1.9.5"
rustyline = "15.0.0"
tungstenite = "0.26.1"
socket2 = "0.5.8"
url = "2.5.4"
ssh2 = "0.9.4"
ftp = "3.0.1"
glob = "0.3.2"
# Needed for parsing JSON streams in egsh.
serde_json = "1.0.135"

[[bin]]
name = "osrf-router"
path = "src/bin/router.rs"

[[bin]]
name = "eg-websockets"
path = "src/bin/websockets.rs"

[[bin]]
name = "eg-http-gateway"
path = "src/bin/http-gateway.rs"

[[bin]]
name = "eg-hold-targeter"
path = "src/bin/hold-targeter.rs"

[[bin]]
name = "eg-marc-export"
path = "src/bin/marc-export.rs"

[[bin]]
name = "eg-parallel-ingest"
path = "src/bin/parallel-ingest.rs"

[[bin]]
name = "eg-auth-to-auth-linker"
path = "src/bin/auth-to-auth-linker.rs"

[[bin]]
name = "eg-edi-file-fetcher"
path = "src/bin/edi-file-fetcher.rs"

[[bin]]
name = "eg-compile-json-query"
path = "src/bin/compile-json-query.rs"

