[package]
name = "kcls"
version = "0.1.0"
edition = "2021"
authors = ["Bill Erickson <berickxx@gmail.com>"]

[dependencies]
marc = { path = "../marc" }
evergreen = { path = "../evergreen" }
json = "0.12"
log = "0.4"
getopts = "0.2"

[[bin]]
name = "kcls-audience-batch-update"
path = "src/bin/audience-batch-update.rs"
