[package]
name = "kcls"
version = "0.1.0"
edition = "2021"
authors = ["Bill Erickson <berickxx@gmail.com>"]

[dependencies]
marctk = { path = "../marctk" }
evergreen = { path = "../evergreen" }
json = "0.12"
log = "0.4"
getopts = "0.2"
calamine = "0.25"
csv = "1.3"
chrono = "0.4"

[[bin]]
name = "kcls-on-order-audience-repairs"
path = "src/bin/on-order-audience-repairs.rs"

[[bin]]
name = "kcls-bib-to-auth-linker"
path = "src/bin/bib-to-auth-linker.rs"

[[bin]]
name = "extract-street-dates"
path = "src/bin/extract-street-dates.rs"

