[package]
name = "marctk"
version = "0.4.1"
edition = "2021"
authors = ["Bill Erickson <berickxx@gmail.com>"]
license-file = "../LICENSE"
description = "MARC21 Binary, Breaker, and XML Toolkit"
readme = "README.md"
keywords = ["marc", "marc21", "marcxml", "library", "bibliographic"]
categories = ["parser-implementations", "value-formatting", "command-line-utilities"]
repository = "https://github.com/kcls/evergreen-universe-rs"

[dependencies]
getopts = "0.2.21"
xml-rs = "0.8.25"

[[bin]]
name = "marc-converter"
path = "src/bin/marc-converter.rs"

