[package]
name = "marctk"
version = "0.6.0"
edition = "2021"
authors = ["Bill Erickson <berickxx@gmail.com>"]
license = "MIT"
description = "MARC21 Binary, Breaker, and XML Toolkit"
readme = "README.md"
keywords = ["marc", "marc21", "marcxml", "library", "bibliographic"]
categories = ["parser-implementations", "value-formatting", "command-line-utilities"]
repository = "https://github.com/kcls/evergreen-universe-rs"

[dependencies]
getopts = "0.2.21"
xml-rs = "0.8.25"

[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "marc-converter"
path = "src/bin/marc-converter.rs"

[[bench]]
name = "extract_values"
harness = false

[features]
marc21_bibliographic = []

# Note: to view the documentation as it would appear on
# docs.rs (with optional features associated with their
# feature flags), you can:
# ```
# cargo install --locked cargo-docs-rs
# cargo +nightly docs-rs --open -p marctk
# ```
[package.metadata.docs.rs]
all-features = true
