[package]
name = "opensrf"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.8.5"
chrono = "0.4.22"
thread-id = "4.0.0"
log = "0.4.17"
syslog = "6.0.1"
json = "0.12.4"
roxmltree = "0.18"
redis = "0.22.1"
gethostname = "0.4"
threadpool = "1.8.1"
websocket = "0.26"
signal-hook = "0.3"

[[bin]]
name = "opensrf-router"
path = "src/bin/router.rs"

[[bin]]
name = "opensrf-websockets"
path = "src/bin/websockets.rs"

[[bin]]
name = "opensrf-buswatch"
path = "src/bin/buswatch.rs"

