[package]
name = "sip2mediator"
version = "0.2.0"
edition = "2021"
authors = ["Bill Erickson <berickxx@gmail.com>"]

[dependencies]
mptc = { path = "../mptc" }
evergreen = { path = "../evergreen" }
sip2 = { path = "../sip2", features = ["json"] }
json = "0.12"
log = "0.4"
getopts = "0.2"
yaml-rust = "0.4"

[[bin]]
name = "eg-sip2-mediator"
path = "src/main.rs"
