[package]
name = "sip2server"
version = "0.1.0"
edition = "2021"

[dependencies]
opensrf = { path = "../opensrf" }
evergreen = { path = "../evergreen" }
sip2 = { path = "../sip2" }
log = "0.4"
yaml-rust = "0.4"
getopts = "0.2"
threadpool = "1.8"
serde_json = "1.0.96"                                                          
chrono = "0.4"
signal-hook = "0.3"
socket2 = "0.5"

[[bin]]
name = "eg-sip2-server"
path = "src/main.rs"
