[package]
name = "sip2server"
version = "0.1.0"
edition = "2021"

[dependencies]
mptc = { path = "../mptc" }
evergreen = { path = "../evergreen" }
sip2 = { path = "../sip2" }
log = "0.4"
yaml-rust = "0.4"
getopts = "0.2"
threadpool = "1.8"
json = "0.12"                                                                
chrono = "0.4"

[[bin]]
name = "eg-sip2-server"
path = "src/main.rs"
