[package]
name = "websockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
websocket = "0.26"
threadpool = "1.8"
opensrf = { path = "../opensrf" }
getopts = "0.2"
json = "0.12"

[[bin]]
name = "opensrf-websockets"
path = "src/main.rs"

