[package]
name = "z39-server"
version = "0.1.0"
edition = "2021"
authors = ["Bill Erickson <berickxx@gmail.com>"]

[dependencies]
mptc = { path = "../mptc" }
z39 = { path = "../z39" }
marctk = { path = "../marctk" }
evergreen = { path = "../evergreen" }
json = "0.12.4"
log = "0.4.22"
yaml-rust = "0.4.5"

[[bin]]
name = "eg-z39-server"
path = "src/main.rs"

