[package]
name = "z39"
version = "0.1.2"
edition = "2021"
authors = ["Bill Erickson <berickxx@gmail.com>"]
license = "MIT"
description = "Z39.50 Types and ASN.1 Messages"
readme = "README.md"
keywords = ["z39", "z3950", "library", "asn1", "bib1"]
categories = ["development-tools", "network-programming", "parser-implementations"]
repository = "https://github.com/kcls/evergreen-universe-rs"

[dependencies]
rasn = "0.22.2"
log = "0.4.25"
strum = "0.26.3"
strum_macros = "0.26.3"
