[package]
name = "kcls-service-address"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
evergreen = { path = "../../evergreen" }
serde_json = "1"
log = "0.4.22"
smarty-rust-sdk = "0.4.4"
tokio = "1.44.2"
geo = "0.30.0"
shapefile = {version = "0.7.0", features = ["geo-types"]}

[[bin]]
name = "kcls-service-address"
path = "src/main.rs"

[dev-dependencies]
serde_json = "1.0.140"


