[package]
name = "eg-service-addrs"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.8"
evergreen = { path = "../../evergreen" }
json = "0.12.4"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
smarty-rust-sdk = "0.4.4"
tokio = "1.44.2"
geo = "0.30.0"
shapefile = {version = "0.7.0", features = ["geo-types"]}
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "eg-service-rs-addrs"
path = "src/main.rs"

[[bin]]
name = "test-shapefile-point"
path = "src/bin/test-shapefile-point.rs"

[[test]]
name = "api"
path = "tests/api.rs"


